ingress/kube-ingress.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/version":"0.34.0","helm.sh/chart":"ingress-nginx-2.11.0"},"name":"ingress-nginx-controller","namespace":"ingress-nginx"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"},{"name":"https","port":443,"pr [...]
    creationTimestamp: "2020-07-11T04:29:01Z"
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/version: 0.34.0
      helm.sh/chart: ingress-nginx-2.11.0
    name: ingress-nginx-controller
    namespace: ingress-nginx
    resourceVersion: "224424"
    selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx-controller
    uid: 56a270f9-1064-4547-9fda-528ffe10985b
  spec:
    clusterIP: 10.99.63.166
    externalTrafficPolicy: Cluster
    ports:
    - name: http
      nodePort: 32004
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      nodePort: 32179
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/version":"0.34.0","helm.sh/chart":"ingress-nginx-2.11.0"},"name":"ingress-nginx-controller-admission","namespace":"ingress-nginx"},"spec":{"ports":[{"name":"https-webhook","port":443,"targetPort":"webhook"}],"selector":{"app.kubern [...]
    creationTimestamp: "2020-07-11T04:29:01Z"
    labels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/version: 0.34.0
      helm.sh/chart: ingress-nginx-2.11.0
    name: ingress-nginx-controller-admission
    namespace: ingress-nginx
    resourceVersion: "224417"
    selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx-controller-admission
    uid: 1744e8c3-c1db-4426-a9a2-f3b9efe8da36
  spec:
    clusterIP: 10.100.157.143
    ports:
    - name: https-webhook
      port: 443
      protocol: TCP
      targetPort: webhook
    selector:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
