ingress/ingress-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - kube.home
    secretName: kubernetes-dashboard-certificates
  rules:
  - host: kube.home
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
